# SimpleTTS

./: README.md  pyproject.toml
data/jenny/: README.md
notebooks/throwaway/: Untitled.ipynb  Untitled1.ipynb  model_training.ipynb
scripts/: process_jenny.py
src/tts/: jenny_dataset.py  loader.py  model.py  model_gaussian.py  tokenizer.py  vocoder.py
